--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.OpenCV.classpath}
+    ${libs.OpenCV.classpath}:\
+    ${libs.Apache_Commons_IO.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
